--- a/01_agama/samyukta/02/SA2_81-92.md
+++ b/01_agama/samyukta/02/SA2_81-92.md
@@ -27,7 +27,7 @@ next: SA2_123-125.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c14'>（如無常，苦、空、無我亦如是說。）</td>
-    <td><em>As with impermanence, pain, emptiness, and not self were likewise taught.)</em></td>
+    <td><em>(As with impermanence, pain, emptiness, and not self were likewise taught.)</em></td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c15'>（如內入處四經，如是外入處色、聲、香、味、觸、法四經。內外入處四經亦如是說。）</td>
@@ -35,7 +35,7 @@ next: SA2_123-125.html
   </tr>
   </table>
   <table class="trans">
-    <th class='ch'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+    <th class='ch'>　　　　　　　　　　　　</th>
   <th class='en'>85-88 (208). The Outer Sense Fields Are Impermanent, Etc.</th>
   <tr>
     <td class='ch' title='t99.2.52c15'></td>
@@ -51,7 +51,7 @@ next: SA2_123-125.html
   </tr>
   </table>
   <table class="trans">
-    <th class='ch'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+    <th class='ch'>　　　　　　　　　　　　</th>
     <th class='en'>89-92 (208). The Inner and Outer Sense Fields Are Impermanent, Etc.</th>  
   <tr>
     <td class='ch' title='t99.2.52c15'></td>
@@ -73,7 +73,7 @@ next: SA2_123-125.html
 
 <ol class="notes-list">
 <li id="n1"><p>This is <em>sūtra</em> no. 208 in the <cite>Taisho</cite> edition and nos. 259-270 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052c07" target="_blank">T99.2.52c7-16</a>). The variant notes at the end describe three sets of four <em>sūtra</em>s, so I have partially reconstituted them as three <em>sūtra</em>s with an abbreviation embedded in each.</p>
-<p>These <em>sūtra</em>s are parallel to <a href="https://suttacentral.net/sn35.186" target="_blank">SN 35.186-194</a> and <a href="https://suttacentral.net/sn35.7" target="_blank">SN 35.7-12</a>. SN 35.7-12 match the template better, but that set of <em>sutta</em>s doesn’t combine inner and outer sense fields. SN 35.186-194 only treat the impermanence of the inner and outer sense fields and has separate <em>sutta</em>s for the past, future, and present, respectively. Those <em>sutta</em>s belong to a group that begins at SN 35.160 that were located at Jīvaka’s Mango Grove, so it seems likely there is a direct relationship with SĀ 2.81-92. They may all form a large group of variations of a few older <em>sūtra</em>s. [<a href="#ref1">back</a>]</p></li>
+<p>These <em>sūtra</em>s are parallel to <a href="https://suttacentral.net/sn35.186" target="_blank">SN 35.186-194</a> and <a href="https://suttacentral.net/sn35.7" target="_blank">SN 35.7-12</a>. SN 35.7-12 match the template better, but that set of <em>sutta</em>s doesn’t combine inner and outer sense fields. SN 35.186-194 only treat the impermanence of the inner and outer sense fields and has separate <em>sutta</em>s for the past, future, and present, respectively. Those <em>sutta</em>s belong to a group that begins at SN 35.160 that were located at Jīvaka’s Mango Grove, so it seems likely that there is a direct relationship with SĀ 2.81-92. They may all form a large group of variations of a few older <em>sūtra</em>s. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
