--- a/01_agama/ekottarika/12/EA_12_01.md
+++ b/01_agama/ekottarika/12/EA_12_01.md
@@ -19,7 +19,7 @@ next: EA_12_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.568a2'>爾時，世尊告諸比丘： 「有一入道淨眾生行，除去愁憂。 無有諸惱，得大智慧，成泥洹證。 所謂當滅五蓋，思惟四意止。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There’s a single-entry path<sup id="ref2"><a href="#n2">2</a></sup> that purifies the conduct of sentient beings and rids them of grief. When they lack afflictions, they attain great wisdom and achieve realization of nirvāṇa. That is to say, they cease the five hindrances and contemplate four abodes of mindfulness.<sup id="ref3"><a href="#n3">3</a></sup></td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There’s a single-entry path<sup id="ref2"><a href="#n2">2</a></sup> that purifies the conduct of sentient beings and rids them of grief. When they lack afflictions, they attain great wisdom and achieve realization of <em>nirvāṇa</em>. That is to say, they cease five hindrances and contemplate four abodes of mindfulness.<sup id="ref3"><a href="#n3">3</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.568a4'>「云何名為『一入』？ 所謂專一心。 是謂『一入』。 云何為『道』？ 所謂賢聖八品道。 一名正見，二名正治，三名正業，四名正命，五名正方便，六名正語，七名正念，八名正定。 是謂名『道』。 是謂『一入道』。</td>
@@ -103,7 +103,7 @@ next: EA_12_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.568c13'>「彼習法而自娯樂，亦觀盡法。 復觀習盡之法。 或復有痛，而現在前可知可見，思惟原本。 無所依倚，而自娯樂不起世間想。 於其中亦不驚怖。 以不驚怖，便得泥洹： 『生死已盡梵行已立。所作已辦。 更不復受有如真實知。』</td>
-    <td id='p21'>21. “He contemplates them as subject to arising and contemplates them as subject to ending. Again, he contemplates them as subject to arising and ending.<sup id="ref9"><a href="#n9">9</a></sup> Perhaps he has a feeling; he then can know and see it as it happens and reflect on its source. Without depending on anything, he doesn’t produce notions about the world.<sup id="ref10"><a href="#n10">10</a></sup> He isn’t alarmed by any of this. Not being alarmed, he then attains nirvāṇa: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I’m no longer subject to existence.’</td>
+    <td id='p21'>21. “He contemplates them as subject to arising and contemplates them as subject to ending. Again, he contemplates them as subject to arising and ending.<sup id="ref9"><a href="#n9">9</a></sup> Perhaps he has a feeling; he then can know and see it as it happens and reflect on its source. Without depending on anything, he doesn’t produce notions about the world.<sup id="ref10"><a href="#n10">10</a></sup> He isn’t alarmed by any of this. Not being alarmed, he then attains <em>nirvāṇa</em>: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I’m no longer subject to existence.’</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.568c18'>「如是，比丘内自觀痛，除去亂念，無有愁憂 ⋯外自觀痛⋯ 内外觀痛，除去亂念，無有愁憂。 如是，比丘内外觀痛。</td>
@@ -127,7 +127,7 @@ next: EA_12_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.569a11'>「觀習法，觀盡法。 并觀習盡之法。 思惟法觀而自娯樂，可知可見可思惟、不可思惟。 無所猗，不起世間想。 已不起想，便無畏怖。 已無畏怖，便無餘。 已無餘，便涅槃： 『生死已盡，梵行已立，所作已辦。 更不復受有如實知之。』</td>
-    <td id='p26'>26. “He contemplates [mind] as subject to arising and contemplates it as subject to ending. Again, he contemplates it as subject to arising and ending. Reflecting on these contemplations,<sup id="ref15"><a href="#n15">15</a></sup> he can know and see what should and shouldn’t be considered.<sup id="ref16"><a href="#n16">16</a></sup> Without depending on anything, he doesn’t produce notions about the world. Not producing such notions, he isn’t alarmed. Not being alarmed, then he has nothing remaining. Once nothing remains, he then attains nirvāṇa: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I’m no longer subject to existence.’</td>
+    <td id='p26'>26. “He contemplates [mind] as subject to arising and contemplates it as subject to ending. Again, he contemplates it as subject to arising and ending. Reflecting on these contemplations,<sup id="ref15"><a href="#n15">15</a></sup> he can know and see what should and shouldn’t be considered.<sup id="ref16"><a href="#n16">16</a></sup> Without depending on anything, he doesn’t produce notions about the world. Not producing such notions, he isn’t alarmed. Not being alarmed, then he has nothing remaining. Once nothing remains, he then attains <em>nirvāṇa</em>: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I’m no longer subject to existence.’</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.569a16'>「如是，比丘内自觀心心意止，除去亂念，無有憂愁 ⋯外觀心 ⋯内外觀心心意止。 如是，比丘心心相觀意止。</td>
@@ -163,7 +163,7 @@ next: EA_12_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.569b9'>「諸比丘，依一入道，眾生得清淨，遠愁憂，無復喜想。 便逮智慧，得涅槃證。 所謂滅五蓋，修四意止也。</td>
-    <td id='p34'>34. “Monks, sentient beings become purified, distance themselves from grief, and no longer delight in notions by relying on this single-entry path. They then gain wisdom and attain nirvāṇa. That is, they cease the five hindrances and cultivate the four abodes of mindfulness.”</td>
+    <td id='p34'>34. “Monks, sentient beings become purified, distance themselves from grief, and no longer delight in notions by relying on this single-entry path. They then gain wisdom and attain <em>nirvāṇa</em>. That is, they cease the five hindrances and cultivate the four abodes of mindfulness.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.569b12'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
