--- a/01_agama/ekottarika/13/EA_13_07.md
+++ b/01_agama/ekottarika/13/EA_13_07.md
@@ -59,7 +59,7 @@ next: ../14/EA_14_01.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.575b14'>爾時，釋提桓因將五百天人及波遮旬，譬如士夫屈伸臂頃，便從三十三天沒，來至靈鷲山中。 離尊者須菩提不遠。 復，以此偈語波遮旬曰</td>
-    <td id='p4'>4. Śakra the Lord of Gods then led five hundred gods and Pañcaśikha as they disappeared from the Trāyastriṃśa Heaven and arrived on Vulture’s Peak in the time it takes for a strong man to flex his arm. They were not very far from Venerable Subhūti. Again, he addressed Pañcaśikha in verse:</td>
+    <td id='p4'>4. Śakra the Lord of Gods then led five hundred gods and Pañcaśikha as they disappeared from the Trāyastriṃśa Heaven and arrived on Vulture’s Peak in the time it takes a strong man to flex his arm. They were not very far from Venerable Subhūti. Again, he addressed Pañcaśikha in verse:</td>
   </tr>
 <tr>
   <td title='T125.2.575b18'><ul class='verse'>
