--- a/01_agama/ekottarika/19/EA_19_01.md
+++ b/01_agama/ekottarika/19/EA_19_01.md
@@ -30,7 +30,7 @@ next: EA_19_02.html
     <td id='p4'>4. Brahmā then said to the Bhagavān, “Here, Jambudvīpa is sure to be destroyed, and the three realms will lose their sight! The Tathāgata, Arhat, and Completely and Rightly Awakened One has arisen in the world. He ought to proclaim the jewel of the teaching, yet he still hasn’t uttered the teaching’s essence. May the Tathāgata widely explain the profound teaching to all sentient beings!</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.593b7'>又此眾生根原易度。 若不聞者，永失法眼。 此應為法之遺子。 猶如優鉢蓮華、拘牟頭華、分陀利華，雖出於地，未出水上，亦未開敷。 是時，彼華漸漸欲生，故未出水。 或時此華以出水上，或時此華不為水所著。 此眾生類亦復如是。 為生、老、病、死所見逼促，諸根應熟。 然不聞法而便喪者，不亦苦哉。 今正是時。 唯願世尊當為說法！」</td>
+    <td class='ch' title='t125.2.593b7'>「又此眾生根原易度。 若不聞者，永失法眼。 此應為法之遺子。 猶如優鉢蓮華、拘牟頭華、分陀利華，雖出於地，未出水上，亦未開敷。 是時，彼華漸漸欲生，故未出水。 或時此華以出水上，或時此華不為水所著。 此眾生類亦復如是。 為生、老、病、死所見逼促，諸根應熟。 然不聞法而便喪者，不亦苦哉。 今正是時。 唯願世尊當為說法！」</td>
     <td id='p5'>5. “Moreover, these sentient beings are easily liberated at their root. If they don’t hear it, they’ll forever miss out on the Dharma eye. This is a teaching that should have disciples to inherit it. They’re like the blue, red, or white lotus flowers that emerge from mud but haven’t risen above the water and bloomed yet. Those flowers slowly grow while they’re under the water. Some of them emerge from the water, and some of them have no water clinging to them [after they emerge]. This type of sentient being is likewise. They are harassed by birth, old age, illness, and death, and their faculties ripen as a result. If they don’t hear the teaching, they’ll still die, but their suffering won’t. Now is the right time. Please explain the teaching for them, Bhagavān!”</td>
   </tr>
   <tr>
