--- a/01_agama/ekottarika/19/EA_19_02.md
+++ b/01_agama/ekottarika/19/EA_19_02.md
@@ -23,7 +23,7 @@ next: ../24/EA_24_05.html
   </tr>
   <tr>
     <td class='ch' title='t125.2.593b28'>「如是，捨此二事已，我自有至要之道得成正覺。 眼生、智生，意得休息。 得諸神通，成沙門果，至於涅槃。</td>
-    <td id='p3'>3. “Thus, after abandoning these two things, I myself possessed the essential path to achieving right awakening. Vision and knowledge arose, and my mind became peaceful. I attained the penetrating knowledges, achieved the fruits of the ascetic, and arrived at <em>nirvāṇa</em>.</td>
+    <td id='p3'>3. “Thus, after abandoning these two things, I myself possessed the essential path to achieve right awakening. Vision and knowledge arose, and my mind became peaceful. I attained the penetrating knowledges, achieved the fruits of the ascetic, and arrived at <em>nirvāṇa</em>.</td>
   </tr>
   <tr>
     <td class='ch' title='t125.2.593c2'>「云何為至要之道得成正覺，眼生、智生，意得休息，得諸神通，成沙門果，至於涅槃？ 所謂此賢聖八品道是，所謂等見、等治、等語、等業、等命、等方便、等念、等定。 此名至要之道。</td>
