fixed sutra titles in EA index and uddana verse in EA 19.2

--- a/01_agama/ekottarika/19/EA_19_01.md
+++ b/01_agama/ekottarika/19/EA_19_01.md
@@ -12,7 +12,7 @@ next: EA_19_02.html
 
 <table class="trans">
   <th class='ch'>（一） 非梵法</th>
-  <th class='en'>1. Brahmā’s Request</th>
+  <th class='en'>1. Not Brahmā’s Dharma</th>
   <tr>
     <td class='ch' title='t125.2.593a24'>聞如是： 一時，佛在摩竭國道場樹下。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was under the <em>bodhi tree</em> in Magadha.</td>
