--- a/01_agama/ekottarika/19/EA_19_02.md
+++ b/01_agama/ekottarika/19/EA_19_02.md
@@ -49,8 +49,9 @@ next: ../24/EA_24_05.html
     二事最在後</li>
   </ul></td>
   <td><ul class='verse'>
-    <li>[17.1] Rāhula, [18.4] Kāśyapa, [18.5] <em>nāga</em> elephant, [18.6-7] two with Nanda<br/>
-    [18.8] The path of great love, [18.9] slander, [19.1] not the way to Brahmā,<br/>
+    <li>[17.1] Rāhula, [18.4] Kāśyapa, [18.5] Ajātaśatru’s Elephant,<br/>
+    [18.6-7] Two with Nanda, [18.8] Mahāprajāpatī,<br/>
+     [18.9] Slander, [19.1] not Brahmā’s Dharma,<br/>
     And [19.2] two things are last.</li>
   </ul></td>
 </tr>
