added source links

--- a/01_agama/ekottarika/16/EA_16_02.md
+++ b/01_agama/ekottarika/16/EA_16_02.md
@@ -40,7 +40,7 @@ next: EA_16_03.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/iti44" target="_blank">Iti 44</a> in Pali sources. It also has a parallel in Xuanzang’s translation of another <em>Itivṛttaka</em> collection (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T17n0765_p0678c09" target="_blank">T765.17.678c9</a>).</p>
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0579a12" target="_blank">T125.2.579a12-23</a>. This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/iti44" target="_blank">Iti 44</a> in Pali sources. It also has a parallel in Xuanzang’s translation of another <em>Itivṛttaka</em> collection (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T17n0765_p0678c09" target="_blank">T765.17.678c9</a>).</p>
 <p>We should note that Iti 44 defines <em>nirvāṇa</em> with remainder as an <em>arhat</em> who is still in this world, while the this <em>sūtra</em> defines it as attaining <em>parinirvāṇa</em> somewhere else (i.e., the fruit of non-returning). The parallel translated by Xuanzang agrees that the two are realization of <em>nirvāṇa</em> in this life or the fruit of the non-returner. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p>nirvāṇa <em>realms</em>. C. 涅槃界, G. <em>nivana dhadu</em>, P. <em>nibbāna dhātu</em>, S. <em>nirvāṇa dhātu</em>. Most translators translate S. <em>dhātu</em> (C. 界) in this term as “element” to avoid the implication of S. <em>nirvāṇa</em> being a place like a heaven. Positing a <em>nirvāṇa</em> element is equally problematic to me, though, and the <em>Ekottarika</em> does speak of it as a figurative destination that’s reached (cf. T125.2.607a28, 608b27, 714b4, 728b15, etc.), so I’ve translated S. <em>dhātu</em> as “realm.” This is, in fact, the literal meaning of 界. [<a href="#ref2">back</a>]</p></li>
 </ol>
