--- a/01_agama/ekottarika/16/EA_16_03.md
+++ b/01_agama/ekottarika/16/EA_16_03.md
@@ -56,7 +56,7 @@ next: EA_16_04.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>I’ve not found a parallel for this <em>sūtra</em>. <a href="https://suttacentral.net/an10.77" target="_blank">AN 10.77</a> likens a bad monk to a crow, whereas here the crow is employed as a positive analogy that’s contrasted with the pig. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0579a24" target="_blank">T125.2.579a24-b20</a>. I’ve not found a parallel for this <em>sūtra</em>. <a href="https://suttacentral.net/an10.77" target="_blank">AN 10.77</a> likens a bad monk to a crow, whereas here the crow is employed as a positive analogy that’s contrasted with the pig. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>impure things</em>. C. 不淨. Lit. “impure” or “unclean.” In this context, I would take it mean something considered inedible by people like carrion, dung, or refuse. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
