--- a/01_agama/samyukta/02/SA2_123-125.md
+++ b/01_agama/samyukta/02/SA2_123-125.md
@@ -7,37 +7,49 @@ previous: SA2_81-92.html
 next: SA2_126.html
 ---
 
-# [The Related Discourses](../index.html)
-## [2. The Sense Fields](index.html)
-### 123-125 (230). Samṛddhi (1-3)
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>2. The Sense Fields</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+<table class="trans">
+  <th class='ch'>（二三〇） 三彌離提</th>
+  <th class='en'>123-125 (230). Samṛddhi (1-3)</th>
+  <tr>
+    <td class='ch' title='t99.2.56a24'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t99.2.56a25'>時，有比丘名三彌離提，往詣佛所，稽首佛足，退坐一面。 白佛言： 「世尊，所謂世間者。 云何名世間？」</td>
+    <td id='p2'>2. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression [123] ‘the world’ … [124] ‘a sentient being’ … [125] ‘Māra.’ What is it that’s called ‘the world’ … ‘a sentient being’ … ‘Māra’?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t99.2.56a27'>佛告三彌離提： 「謂眼、色、眼識、眼觸、眼觸因緣生受，內覺若苦、若樂、不苦不樂。 耳、鼻、舌、身、意、法、意識、意觸、意觸因緣生受，內覺若苦、若樂、不苦不樂。 是名世間。 所以者何？ 六入處集則觸集。 如是⋯乃至⋯純大苦聚集。</td>
+    <td id='p3'>3. The Buddha told Samṛddhi, “It refers to the eye, form, visual awareness, visual contact, feelings that dependently arise from visual contact, and inner experiences that are painful, pleasant, or neither painful nor pleasant. It refers to the ear … nose … tongue … body … mind, ideas, mental awareness, mental contact, feelings that dependently arise from mental contact, and inner experiences that are painful, pleasant, or neither painful nor pleasant. This is called ‘the world’ … ‘a sentient being’ … ‘Māra.’ Why is that? When the six sense fields form, then contact forms … The whole mass of suffering forms in this way.<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='t99.2.56b3'>「三彌離提，若無彼眼、無色、無眼識、無眼觸、無眼觸因緣生受，內覺若苦、若樂、不苦不樂。 無耳、鼻、舌、身、意、法、意識、意觸、意觸因緣生受，內覺若苦、若樂、若不苦不樂者。 則無世間，亦不施設世間。 所以者何？ 六入處滅則觸滅。 如是⋯乃至⋯純大苦聚滅故。」</td>
+    <td id='p4'>4. “Samṛddhi, suppose there’s no eye, no form, no visual awareness, no visual contact, no feelings that dependently arise from visual contact, and no inner experiences that are painful, pleasant, or neither painful nor pleasant. There’s no ear … nose … tongue … mind, ideas, mental awareness, mental contact, feelings that dependently arise from mental contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant. Then, there’s no world … no sentient being … no Māra, nor what’s supposed to be the world … a sentient being … Māra. Why is that? When the six sense fields cease, then contact ceases … The whole mass of suffering ceases in this way.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t99.2.56b8'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p5'>5. After he spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t99.2.56b10'>（如「世間」，如是「眾生」、如是「魔」亦如是說。）</td>
+    <td id='p6'>6. (<em>As with the world, a sentient being and Māra are explained in the same way.</em>)</td>
+  </tr>
+</table>
 
-2\. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s what’s called ‘the world’ (2.123) … ‘a sentient being’ (2.124) … ‘Māra’ (2.125). What is it that’s called ‘the world’ … ‘a sentient being’ … ‘Māra’?”
-{:#p2}
+<hr/>
 
-3\. The Buddha told Samṛddhi, “It refers to the eye, form, visual consciousness, visual contact, feelings that dependently arise from visual contact, and inner experiences that are painful, pleasant, or neither painful nor pleasant. It refers to the ear … nose … tongue … body … mind, notions, cognitive consciousness, cognitive contact, and feelings that dependently arise from cognitive contact, and inner experiences that are painful, pleasant, or neither painful nor pleasant. This is called ‘the world’ … ‘a sentient being’ … ‘Māra.’ Why is that? The six sense fields form, and then contact forms … The whole mass of suffering forms.[\[2\]](#n2){:#ref2}
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Samṛddhi, suppose there’s no eye, no form, no visual consciousness, no visual contact, no feelings that dependently arise from visual contact, and no inner experiences that are painful, pleasant, or neither painful nor pleasant. There’s no ear … nose … tongue … mind, notions, cognitive consciousness, cognitive contact, feelings that dependently arise from cognitive contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant. Then, there’s no world … no sentient being … no Māra, nor what’s supposed to be the world  … a sentient being … Māra. Why is that? When the six sense fields cease, then contact ceases … The whole mass of suffering ceases.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>This is <em>sūtra</em> no. 230 in the <cite>Taisho</cite> edition and no. 301-303 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056a24" target="_blank">T99.2.56a24-b10</a>). It’s parallel to <a href="https://suttacentral.net/sn35.65" target="_blank">SN 35.65-66</a> and <a href="https://suttacentral.net/sn35.68" target="_blank">68</a>. The only major difference is that here dependent origination and cessation are mentioned as the reasoning behind defining these three things in terms of sensory experience. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>The full passage here would presumably include the remaining chain of dependent origination. Feeling, craving, grasping, existence, birth, old age, illness, death, grief, sorrow, pain, and trouble have been omitted. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 7 February 2025</p>
 
----
-
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 230 in the <cite>Taisho</cite> edition and no. 301-303 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056a24" target="_blank">T99.2.56a24-b10</a>). It’s parallel to <a href="https://suttacentral.net/sn35.68" target="_blank">SN 35.68</a>. [\[back\]](#ref1)
-2. {:#n2} The full passage would presumably include the remaining chain of dependent origination, i.e. feeling, craving, clinging, existence, birth, old age, illness, death, grief, sorrow, pain, and trouble have been omitted. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
