--- a/01_agama/samyukta/02/SA2_126.md
+++ b/01_agama/samyukta/02/SA2_126.md
@@ -7,33 +7,40 @@ previous: SA2_123-125.html
 next: SA2_127.html
 ---
 
-# [The Related Discourses](../index.html)
-## [2. The Sense Fields](index.html)
-### 126 (231). Samṛddhi (4)
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>2. The Sense Fields</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+<table class="trans">
+  <th class='ch'>（二三一） 三彌離提</th>
+  <th class='en'>126 (231). Samṛddhi (4)</th>
+  <tr>
+    <td class='ch' title='t99.2.56b11'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t99.2.56b12'>時，有比丘名三彌離提，往詣佛所，稽首佛足，退坐一面。 白佛言： 「世尊，所謂『世間』者。 云何名『世間』？」</td>
+    <td id='p2'>2. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression ‘the world.’ What is it that’s called the ‘world’?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t99.2.56b14'>佛告三彌離提： 「危脆敗壞，是名『世間』。 云何危脆敗壞？ 三彌離提，眼是危脆敗壞法。 若色、眼識、眼觸、眼觸因緣生受，內覺若苦、若樂、不苦不樂，彼一切亦是危脆敗壞。 耳、鼻、舌、身、意亦復如是。 是說危脆敗壞法，名為『世間』。」</td>
+    <td id='p3'>3. The Buddha told Samṛddhi, “What’s fragile and decaying, that is called ‘the world.’ What is it that’s fragile and decaying? Samṛddhi, the eye is something that’s fragile and decaying. Whether it’s form, visual awareness, visual contact, feelings that dependently arise from visual contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant, they are all fragile and decaying. <em>The ear, nose, tongue, body, and mind are likewise.</em> These things that are said to be fragile and decaying are called ‘the world.’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t99.2.56b19'>佛說此經已，三彌離提比丘聞佛所說歡喜，奉行。</td>
+    <td id='p4'>4. After the he spoke this <em>sūtra</em>, the monk Samṛddhi who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s what’s called ‘the world.’ What is it that’s called the ‘world’?”
-{:#p2}
+<hr/>
 
-3\. The Buddha told Samṛddhi, “What’s fragile and decaying is called ‘the world.’ What’s called fragile and decaying? Samṛddhi, the eye is something fragile and decaying. Whether it’s form, visual consciousness, visual contact, feelings that dependently arise from visual contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant, they are all fragile and decaying. <em>The ear, nose, tongue, body, and mind are likewise.</em> These things that are said to be fragile and decaying are called ‘the world.’”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. After the Buddha spoke this sūtra, the monk Samṛddhi who heard what the Buddha taught rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>This is <em>sūtra</em> no. 231 in the <cite>Taisho</cite> edition and no. 304 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056b11" target="_blank">T99.2.56b11-20</a>). It’s parallel to <a href="https://suttacentral.net/sn35.82" target="_blank">SN 35.82</a> and <a href="https://suttacentral.net/sn35.84" target="_blank">84</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 17 February 2025</p>
 
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 231 in the <cite>Taisho</cite> edition and no. 304 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056b11" target="_blank">T99.2.56b11-20</a>). It’s parallel to [SN 35.82](https://suttacentral.net/sn35.82){:target="_blank"} and [84](https://suttacentral.net/sn35.84){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
