--- a/01_agama/samyukta/02/SA2_126.md
+++ b/01_agama/samyukta/02/SA2_126.md
@@ -27,7 +27,7 @@ next: SA2_127.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.56b19'>佛說此經已，三彌離提比丘聞佛所說歡喜，奉行。</td>
-    <td id='p4'>4. After the he spoke this <em>sūtra</em>, the monk Samṛddhi who heard what the Buddha taught rejoiced and approved.</td>
+    <td id='p4'>4. After he spoke this <em>sūtra</em>, the monk Samṛddhi who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
 
