Added EA 17.1-6 along with a few corrections

--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -123,7 +123,7 @@ next: MA_003.html
 <p>Xuanzang translated <em>vitarka</em> and <em>vicāra</em> as <span class="ch">尋</span> and <span class="ch">伺</span>, which mean “seeking" and “examining.” <span class="ch">尋</span> has the connotation of “quick, hasty,” while <span class="ch">伺</span> can also mean “to wait in ambush.” Thus, the two terms have a sense of short and long attention spans, which agrees with the idea of initial and sustained thought in some Theravāda interpretations of <em>vitakka</em> and <em>vicāra</em>.</p>
 <p>The <cite>Dharmaskandha</cite> commentary describes <em>vitarka</em> in this way: “Once one is secluded from desires and bad and unskillful things, their mind seeks things, seeking everywhere and seeking nearby. Their mind is apparent, quite apparent, directly apparent. They speculate, postulate, think, and discern things. This is generally called seeking.” (<span class="ch">離欲惡不善法者，心尋求、遍尋求、近尋求。心顯了、極顯了、現前顯了。推度搆畫、思惟分別，總名為尋。</span>)</p>
 <p><em>Vicāra</em> is described in this way: “Once one is secluded from desires and bad and unskillful things, their mind examines things, examining everywhere and examining nearby. It follows actions, follows developments, follows streams, and follows relationships. This is generally called examining.” (<span class="ch">離欲惡不善法者，心伺察、遍伺察、近伺察。隨行隨轉、隨流隨屬，總名為伺。</span>)</p>
-<p>These two words are very similar in meaning. The question naturally arises: What is the difference between them? The commentary’s answer is that <em>vitarka</em> makes thoughts that are crude in nature, and <em>vicāra</em> makes thoughts that are fine in nature (<span class="ch">令心麁性是尋，令心細性是伺</span>). This is illustrated this with several concrete metaphors: When a temple bell is struck, the sound is crude in the initial moment, and then a finer sound developments afterward. The crude sound is like <em>vitarka</em>, and the finer sound is like <em>vicāra</em>. It’s the same with the sounds made by shaking a hand bell, knocking a bowl, blowing a conch, hitting a drum, shooting an arrow, and a thunderclap. It’s also likened to a flock of birds flying in the sky. The flapping of their wings is like <em>vitarka</em>, and the lifting of their bodies is like <em>vicāra</em>.</p>
+<p>These two words are very similar in meaning. The question naturally arises: What is the difference between them? The commentary’s answer is that <em>vitarka</em> makes thoughts that are crude in nature, and <em>vicāra</em> makes thoughts that are fine in nature (<span class="ch">令心麁性是尋，令心細性是伺</span>). This is illustrated with several concrete metaphors: When a temple bell is struck, the sound is crude in the initial moment, and then a finer sound developments afterward. The crude sound is like <em>vitarka</em>, and the finer sound is like <em>vicāra</em>. It’s the same with the sounds made by shaking a hand bell, knocking a bowl, blowing a conch, hitting a drum, shooting an arrow, and a thunderclap. It’s also likened to a flock of birds flying in the sky. The flapping of their wings is like <em>vitarka</em>, and the lifting of their bodies is like <em>vicāra</em>.</p>
 <p>After this discussion, the whole expression “having seeking and having examining” is described in this way: “Once one is secluded from desires and bad and unskillful things, their mind seeks and examines associated requisites.” (<span class="ch">離欲惡不善法者，心相應品具有尋伺。</span>)</p>
 <p><em>this seclusion produces joy and happiness in them.</em> C. <span class="ch">離生喜樂</span>, P. <em>vivekajaṁ pītisukhaṁ</em>, S. <em>vivekajaṁ prītisukhaṁ</em>. The commentary lists several things that seclusion (<span class="ch">離</span>) means: Being secluded from desires, being secluded from bad and unskillful things, having left home, the form realm’s roots of goodness, and the first meditation. The commentator takes the intended meaning to be the last option.</p>
 <p>Joy (<span class="ch">喜</span>) is described as being delighted, pleased, gladdened, joyous, exultant, and satisfied. In combination with happiness, it makes a person celebrate and rejoice. Happiness (<span class="ch">樂</span>) is described as a lack of heaviness and unsuitability in body and mind, as well as gaining smoothness, easiness, suitability, seclusion from the hindrances, serenity, being untroubled, and gentleness in body and mind.</p>
