--- a/01_agama/samyukta/13/SA13_24.md
+++ b/01_agama/samyukta/13/SA13_24.md
@@ -17,7 +17,7 @@ next: SA13_25.html
 2\. In the early morning, Venerable Ānanda put on his robe, took his bowl, and went to Śrāvastī to solicit alms. The priest Jātiśroṇa[\[2\]](#n2){:#ref2} was riding a chariot with white horses, and a crowd of many youths was following him. The horses, chariot, bridle, and whip were white. He wore a white hat, his parasol was white, and he held a white whisk in hand. He wore white clothes, his jewelry was white, white powder was smeared on his body, and his followers were all in white. They were leaving Śrāvastī intending to go to a grove for instruction and recitation. When the crowds saw them, they all said, “Excellent vehicle, excellent vehicle! That’s called the Brahma vehicle!”
 {:#p2}
 
-3\. Venerable Ānanda then saw that this priest’s retinue and many accoutrements were all white. After he saw this, he went into the city to solicit alms. Returning to the monastery, he put away his robe and bowl and washed his feet. He then went to the Buddha, prostrated at the Buddha’s feet, and withdrew to sit at one side. He said, “Bhagavān, today in the early morning, I put on my robe, took my bowl, and went to Śrāvastī to solicit alms. I saw the priest Jānusoṇi riding a chariot with white horses. His retinue and many accoutrements were all white. A crowd of people called out, ‘Excellent vehicle, excellent vehicle! That’s called the Brahma vehicle!’ Bhagavān, is there a worldly person’s vehicle or a Brahma vehicle in the right teaching and discipline?”
+3\. Venerable Ānanda then saw that this priest’s retinue and many accoutrements were all white. After he saw this, he went into the city to solicit alms. Returning to the monastery, he put away his robe and bowl and washed his feet. He then went to the Buddha, prostrated at the Buddha’s feet, and withdrew to sit at one side. He said, “Bhagavān, today in the early morning, I put on my robe, took my bowl, and went to Śrāvastī to solicit alms. I saw the priest Jātiśroṇa riding a chariot with white horses. His retinue and many accoutrements were all white. A crowd of people called out, ‘Excellent vehicle, excellent vehicle! That’s called the Brahma vehicle!’ Bhagavān, is there a worldly person’s vehicle or a Brahma vehicle in the right teaching and discipline?”
 {:#p3}
 
 4\. The Buddha told Ānanda, “That was a worldly person’s vehicle, not the Brahma vehicle of my teaching and discipline. Ānanda, my vehicle of the right teaching and discipline is the divine vehicle, the Brahma vehicle, and the great vehicle, which can control the army of afflictions. Listen closely and consider this well. I will explain it for you.
